[package]
name = "packetio"
version = "0.1.0"
edition = "2024"
authors = ["Gael <gaelgnz23@hotmail.com>"]
readme = "README.md"
license = "BSD-3-Clause"
description = "A simple Rust crate for sending and receiving length-prefixed binary packets over any stream that implements `Read + Write`. Uses [`bincode`](https://crates.io/crates/bincode) for serialization. It lets you send structs and rust types over the network!"
[dependencies]
bincode = "2.0.1"
